--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -16,7 +16,8 @@ jobs:
 
     steps:
     - run: |
-          ls ${{ github.workspace }}    - uses: actions/checkout@v2
+          ls ${{ github.workspace }}    
+    - uses: actions/checkout@v2
     - name: Set up JDK 11
       uses: actions/setup-java@v2
       with:
