--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -26,4 +26,4 @@ jobs:
         distribution: 'adopt'
         cache: maven
     - name: Build with Maven
-      run: mvn -B package --file ../mavengithubaction/pom.xml
+      run: mvn -B package --file ./mavengithubaction/pom.xml
